# dicom-dose-analyzer

./: .gitignore  pyproject.toml
data/: 14201172_MamamLNmCMI-QA1.dcm  QASRSVERT_Prueba3conos2.dcm  QASRSVERT_Prueba3conos2_Dose_RxA_Bm1.asc  config.json
dicom_dose_analyzer/: __init__.py  dicom_dose.py
dicom_dose_analyzer/templates/: omniPro_footer  omniPro_header
templates/: omniPro_measure
tests/: test_dicom_dose_analyzer.py
